--- a/src/feed/gateway/feed.html
+++ b/src/feed/gateway/feed.html
@@ -20,6 +20,7 @@
         const handleSubmit = () => {
             socket.emit('message', {data: message.value});
             socket.emit('GetPosts', {data: message.value});
+            socket.emit('updateLikeCount', {data: message.value})
         };
 
         socket.on('message', (res) => {
@@ -30,6 +31,11 @@
         socket.on('GetPosts', (data)=> {
             console.log(data)
             return data
+        });
+        
+        socket.on('updateLikeCount', (data) => {
+          console.log('Received updated likes:', data);
+          // Обработка обновленных данных о лайках
         });
         
     </script>
