--- a/src/feed/gateway/feed.html
+++ b/src/feed/gateway/feed.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -40,4 +40,4 @@
         
     </script>
   </body>
-</html>
+</html> -->
