--- a/src/sockets/gateway/index.html
+++ b/src/sockets/gateway/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -33,4 +33,4 @@
       });
     </script>
   </body>
-</html>
+</html> -->
